--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.9.1"
-kotlin = "2.0.21"
+#kotlin = "2.0.21"
+kotlin = "1.9.24"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -19,6 +20,12 @@ kotlinCompilerExtension = "1.5.5"
 
 # Datastore
 datastore = "1.0.0"
+
+# Hilt Navigation
+hilt-navigation-compose = "1.1.0" # Use the version that matches your Compose setup
+
+# Javapoet
+javapoet = "1.13.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -48,6 +55,12 @@ hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hil
 # Datastore
 datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 
+# Hilt Navigation
+hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
+
+# Javapoet
+javapoet = { module = "com.squareup:javapoet", version.ref = "javapoet" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
@@ -56,3 +69,4 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 # ----------- PR Added ----------- #
 # Dagger (Hilt)
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+hilt-android = { id = "com.google.dagger.hilt.android", version = "2.48" }
